trying to get menus working and mostly failing

--- a/foreman-task-tracker/manifest.json
+++ b/foreman-task-tracker/manifest.json
@@ -14,7 +14,8 @@
     "app.window",
     "storage",
     "unlimitedStorage",
-    "notifications"
+    "notifications",
+    "contextMenus"
   ],
   "icons": {
     "16": "assets/icon.png",
