--- a/syncfs-editor/manifest.json
+++ b/syncfs-editor/manifest.json
@@ -13,5 +13,5 @@
       "scripts": ["js/background.js"]
     }
   },
-  "permissions": ["syncFileSystem"]
+  "permissions": ["syncFileSystem", "unlimitedStorage"]
 }
