--- a/gdocs/manifest.json
+++ b/gdocs/manifest.json
@@ -23,7 +23,7 @@
     }
   },
   "permissions": [
-    "experimental",
+    "identity",
     "https://docs.google.com/feeds/",
     "https://docs.googleusercontent.com/",
     "https://spreadsheets.google.com/feeds/",
