Udpates to the documentation of the Identity related apps

--- a/instagram-auth/manifest.json
+++ b/instagram-auth/manifest.json
@@ -14,5 +14,5 @@
     }
   },
   "key": "UEFVTCBST0NLUw==",
-  "permissions": ["experimental", "identity", "https://api.instagram.com/*"]
+  "permissions": ["identity", "https://api.instagram.com/*"]
 }
