--- a/identity/manifest.json
+++ b/identity/manifest.json
@@ -11,6 +11,8 @@
   },
   "permissions": ["identity"],
   "oauth2": {
+    // client_id below is specifc to the application key. Follow the
+    // documentation to obtain one for your app.
     "client_id": "856497584538.apps.googleusercontent.com",
     "scopes": ["https://www.googleapis.com/auth/plus.login"]
   }
