Change fileSystem.retainFiles to fileSystem.retainEntries.
This is to match http://crrev.com/210104.

--- a/filesystem-access/manifest.json
+++ b/filesystem-access/manifest.json
@@ -13,7 +13,7 @@
     }
   },
   "permissions": [
-    {"fileSystem": ["write", "retainFiles"]},
+    {"fileSystem": ["write", "retainEntries"]},
     "storage"
   ],
   "file_handlers": {
