--- a/printing/manifest.json
+++ b/printing/manifest.json
@@ -2,8 +2,8 @@
   "name": "Printest",
   "description": "A printing testbed",
   "manifest_version": 2,
-  "minimum_chrome_version": "29",
-  "version": "0.1.5",
+  "minimum_chrome_version": "32",
+  "version": "0.1.6",
   "app": {
     "background": {
       "scripts": [
@@ -17,7 +17,8 @@
     }
   },
   "permissions": [
-    "storage"
+    "storage",
+    "system.display"
   ],
   "icons": {
     "16": "icon-16x16.png",
