--- a/telnet/manifest.json
+++ b/telnet/manifest.json
@@ -2,7 +2,7 @@
   "name": "Telnet Client",
   "version": "2",
   "manifest_version": 2,
-  "minimum_chrome_version": "23",
+  "minimum_chrome_version": "33.0.1715.0",
   "icons": {
     "128": "icon_128.png"
   },
@@ -11,9 +11,9 @@
       "scripts": ["launch.js"]
     }
   },
-  "permissions": [
-    {"socket": [
-      "tcp-connect:*:*"
-    ]}
-  ]
+  "sockets": {
+    "tcp": {
+      "connect": "*:*"
+    }
+  }
 }
