--- a/multicast/manifest.json
+++ b/multicast/manifest.json
@@ -2,7 +2,7 @@
   "name": "Multicast Chat Sample",
   "version": "0.2",
   "manifest_version": 2,
-  "minimum_chrome_version": "27",
+  "minimum_chrome_version": "33.0.1715.0",
   "description": "Sending/Receiving multicast diagrams.",
   "app": {
     "background": {
@@ -17,10 +17,13 @@
     "128": "128.png"
   },
 
-  "permissions": [
-    "storage",
-    {
-      "socket": ["udp-send-to", "udp-bind", "udp-multicast-membership"]
+  "permissions": ["storage"],
+
+  "sockets": {
+    "udp": {
+      "send": "",
+      "bind": "",
+      "multicastMembership": ""
     }
-  ]
+  }
 }
