--- a/parrot-ar-drone/manifest.json
+++ b/parrot-ar-drone/manifest.json
@@ -7,18 +7,19 @@
       "scripts": ["main.js"]
     }
   },
-  "permissions": [{
-    "socket": [
-      "udp-bind::5554",
-      "udp-send-to::5554",
-
-      "tcp-connect:*:5555",
-      "tcp-listen:*:5555",
-
-      "udp-bind::5556",
-      "udp-send-to::5556",
-
-      "udp-bind::5559",
-      "udp-send-to::5559"]
-    }]
+  "permissions": ["system.network"],
+  "sockets": {
+    "udp": {
+      "bind": ":5554",
+      "send": ":5554",
+      "bind": ":5556",
+      "send": ":5556",
+      "bind": ":5559",
+      "send": ":5559",
+    },
+    "tcp": {
+      "connect": "*:5555",
+      "listen": "*:5555",
+    }
+  }
 }
