Include my HID device
FOR ME ONLY - Just updated for my device.

--- a/samples/hid/manifest.json
+++ b/samples/hid/manifest.json
@@ -13,7 +13,8 @@
 		{
 			"usbDevices": [
 				{ "vendorId": 0, "productId": 65535 },
-				{ "vendorId": 65535, "productId": 0 }
+				{ "vendorId": 65535, "productId": 0 },
+				{ "vendorId": 5538, "productId": 512}
  			]
 		}
 	]
