Updates based on article drafting process

--- a/tutorials/getting-started/manifest.json
+++ b/tutorials/getting-started/manifest.json
@@ -6,7 +6,7 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage", "declarativeContent", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
