--- a/tutorials/reading-time/manifest.json
+++ b/tutorials/reading-time/manifest.json
@@ -1,10 +1,20 @@
 {
   "manifest_version": 3,
-  "name": "Extension Documentation Reading Time",
+  "name": "Reading Time",
   "version": "1.0",
+  "description": "Add the total reading time to Chrome Extension documentation articles",
+
+  "icons": {
+    "16": "icons/rt-icon-16.png",
+    "32": "icons/rt-icon-32.png",
+    "48": "icons/rt-icon-48.png",
+    "128": "icons/rt-icon-128.png"
+  },
   "content_scripts": [
     {
-      "js": ["content.js"],
+      "js": [
+        "scripts/content.js"
+      ],
       "matches": [
         "https://developer.chrome.com/docs/extensions/*",
         "https://developer.chrome.com/docs/webstore/*"
