--- a/tutorials/reading-time/manifest.json
+++ b/tutorials/reading-time/manifest.json
@@ -5,10 +5,10 @@
   "description": "Add the total reading time to Chrome Extension documentation articles",
 
   "icons": {
-    "16": "icons/rt-icon-16.png",
-    "32": "icons/rt-icon-32.png",
-    "48": "icons/rt-icon-48.png",
-    "128": "icons/rt-icon-128.png"
+    "16": "images/icon-16.png",
+    "32": "images/icon-32.png",
+    "48": "images/icon-48.png",
+    "128": "images/icon-128.png"
   },
   "content_scripts": [
     {
