--- a/tutorials/focus-mode/manifest.json
+++ b/tutorials/focus-mode/manifest.json
@@ -1,12 +1,26 @@
 {
   "manifest_version": 3,
   "name": "Focus Mode",
-  "description": "Enable reading mode on extension and web store documentation.",
-  "version": "1.0.0",
+  "description": "Enable reading mode on extension and web store documentation pages.",
+  "version": "1.0",
+  "icons": {
+    "16": "images/icon-16.png",
+    "32": "images/icon-32.png",
+    "48": "images/icon-48.png",
+    "128": "images/icon-128.png"
+  },
   "background": {
     "service_worker": "background.js"
   },
-  "action": {},
+  "action": {
+    "default_icon": {
+      "16": "images/icon-16.png",
+      "32": "images/icon-32.png",
+      "48": "images/icon-48.png",
+      "128": "images/icon-128.png"
+    }
+  },
+  "permissions": ["scripting", "activeTab", "commands"],
   "commands": {
     "_execute_action": {
       "suggested_key": {
@@ -14,6 +28,5 @@
         "mac": "Command+U"
       }
     }
-  },
-  "permissions": ["scripting", "activeTab", "declarativeContent", "commands"]
+  }
 }
