--- a/api/action/manifest.json
+++ b/api/action/manifest.json
@@ -9,16 +9,16 @@
     "default_title": "Default Title",
     "default_popup": "popups/popup.html",
     "default_icon": {
-      "32": "icons/32.png",
-      "72": "icons/72.png",
-      "128": "icons/128.png",
-      "512": "icons/512.png"
+      "32": "/icons/32.png",
+      "72": "/icons/72.png",
+      "128": "/icons/128.png",
+      "512": "/icons/512.png"
     }
   },
   "icons": {
-    "32": "icons/32.png",
-    "72": "icons/72.png",
-    "128": "icons/128.png",
-    "512": "icons/512.png"
+    "32": "/icons/32.png",
+    "72": "/icons/72.png",
+    "128": "/icons/128.png",
+    "512": "/icons/512.png"
   }
 }
