Add tabs permission
A new tab cannot be opened unless the tabs permission is enabled.

--- a/examples/hello-world/manifest.json
+++ b/examples/hello-world/manifest.json
@@ -1,9 +1,10 @@
 {
-  "name": "Hello, World!",
-  "version": "1.0",
-  "manifest_version": 3,
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {}
+    "name": "Hello, World!",
+    "version": "1.0",
+    "manifest_version": 3,
+    "permissions" : ["tabs"],
+    "background": {
+      "service_worker": "background.js"
+    },
+    "action": {}
 }
