--- a/examples/favicon-cs/manifest.json
+++ b/examples/favicon-cs/manifest.json
@@ -5,7 +5,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "css": ["style.css"]
     }
   ],
   "permissions": ["favicon"],
