--- a/api/favicon/manifest.json
+++ b/api/favicon/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Favicon API demo",
+  "name": "Favicon API in a popup",
   "version": "1.1",
   "manifest_version": 3,
   "permissions": ["favicon"],
