Apply @oliverdunk's tech review

--- a/examples/favicon-cs/manifest.json
+++ b/examples/favicon-cs/manifest.json
@@ -13,8 +13,7 @@
   "web_accessible_resources": [
     {
       "resources": ["_favicon/*"],
-      "matches": ["<all_urls>"],
-      "extension_ids": ["*"]
+      "matches": ["<all_urls>"]
     }
   ]
 }
