--- a/examples/side-panel-1/manifest.json
+++ b/examples/side-panel-1/manifest.json
@@ -1,11 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "1 - Side panel example",
+  "name": "1 - BLUE Side panel example",
   "version": "1.0",
-  "description": "A simple extension with a sidePanel",
+  "description": "Sidepanel declared only in the manifest visible to all sites",
   "icons": {
     "16": "images/icon-16.png",
-    "32": "images/icon-32.png",
     "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
