--- a/api/favicon/manifest.json
+++ b/api/favicon/manifest.json
@@ -1,17 +1,9 @@
 {
-  "name": "Favicon",
-  "version": "1",
+  "name": "Favicon API in a popup",
+  "version": "1.1",
   "manifest_version": 3,
   "permissions": ["favicon"],
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": ["content.js"],
-    "run_at": "document_idle"
-  }],
-  "web_accessible_resources": [{
-    "resources": [ "_favicon/*" ],
-    "matches": ["<all_urls>"],
-    "extension_ids": [ "*" ]
-  }],
-  "action": { "default_popup": "content.html" }
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
