update  keyboard shortcut (link)

--- a/tutorials/focus-mode/manifest.json
+++ b/tutorials/focus-mode/manifest.json
@@ -24,8 +24,8 @@
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+U",
-        "mac": "Command+U"
+        "default": "Ctrl+B",
+        "mac": "Command+B"
       }
     }
   }
