--- a/_archive/mv2/tutorials/broken_background_color/manifest.json
+++ b/_archive/mv2/tutorials/broken_background_color/manifest.json
@@ -2,13 +2,17 @@
   "name": "Broken Background Color",
   "version": "1.0",
   "description": "Fix an Extension!",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
+  "permissions": [
+    "activeTab",
+    "declarativeContent",
+    "storage",
+    "scripting"
+  ],
   "options_page": "options.html",
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "page_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/get_started16.png",
@@ -23,5 +27,5 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
-  "manifest_version": 2
+  "manifest_version": 3
 }
