Remove storage perm

--- a/examples/side-panel-1/manifest.json
+++ b/examples/side-panel-1/manifest.json
@@ -11,5 +11,5 @@
   "side_panel": {
     "default_path": "sidepanel.html"
   },
-  "permissions": ["storage", "sidePanel"]
+  "permissions": ["sidePanel"]
 }
