migrate chrome.printing api sample from v2 to v3 manifest

--- a/api-samples/printing/manifest.json
+++ b/api-samples/printing/manifest.json
@@ -5,7 +5,7 @@
   "permissions": [
     "printing"
   ],
-  "browser_action": {
+  "action": {
     "default_popup": "printers.html",
     "default_icon": "icons/icon.png"
   },
@@ -14,5 +14,5 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "manifest_version": 2
+  "manifest_version": 3
 }
