Fix all prettier and eslint errors

--- a/functional-samples/cookbook.offscreen-clipboard-write/manifest.json
+++ b/functional-samples/cookbook.offscreen-clipboard-write/manifest.json
@@ -6,8 +6,5 @@
     "service_worker": "background.js"
   },
   "action": {},
-  "permissions": [
-    "offscreen",
-    "clipboardWrite"
-  ]
+  "permissions": ["offscreen", "clipboardWrite"]
 }
