--- a/functional-samples/reference.mv3-content-scripts/manifest.json
+++ b/functional-samples/reference.mv3-content-scripts/manifest.json
@@ -5,10 +5,7 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": [
-    "scripting",
-    "activeTab"
-  ],
+  "permissions": ["scripting", "activeTab"],
   "action": {
     "default_popup": "popup.html"
   }
