--- a/functional-samples/sample.water_alarm_notification/manifest.json
+++ b/functional-samples/sample.water_alarm_notification/manifest.json
@@ -3,11 +3,7 @@
   "description": "Demonstrates usage and features of the event page by reminding user to drink water",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": [
-    "alarms",
-    "notifications",
-    "storage"
-  ],
+  "permissions": ["alarms", "notifications", "storage"],
   "background": {
     "service_worker": "background.js"
   },
