--- a/functional-samples/tutorial.reading-time/manifest.json
+++ b/functional-samples/tutorial.reading-time/manifest.json
@@ -12,9 +12,7 @@
   },
   "content_scripts": [
     {
-      "js": [
-        "scripts/content.js"
-      ],
+      "js": ["scripts/content.js"],
       "matches": [
         "https://developer.chrome.com/docs/extensions/*",
         "https://developer.chrome.com/docs/webstore/*"
