--- a/functional-samples/tutorial.tabs-manager/manifest.json
+++ b/functional-samples/tutorial.tabs-manager/manifest.json
@@ -11,10 +11,6 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "host_permissions": [
-    "https://developer.chrome.com/*"
-  ],
-  "permissions": [
-    "tabGroups"
-  ]
+  "host_permissions": ["https://developer.chrome.com/*"],
+  "permissions": ["tabGroups"]
 }
