--- a/api-samples/alarms/manifest.json
+++ b/api-samples/alarms/manifest.json
@@ -5,8 +5,6 @@
   "background": {
     "service_worker": "bg-wrapper.js"
   },
-  "permissions": [
-    "alarms"
-  ],
+  "permissions": ["alarms"],
   "action": {}
 }
