--- a/functional-samples/sample.page-redder/manifest.json
+++ b/functional-samples/sample.page-redder/manifest.json
@@ -4,10 +4,7 @@
   "manifest_version": 3,
   "version": "0.1",
   "description": "Turns the page red when you click the icon",
-  "permissions": [
-    "activeTab",
-    "scripting"
-  ],
+  "permissions": ["activeTab", "scripting"],
   "background": {
     "service_worker": "background.js"
   }
