use <all_urls> host_permission

--- a/functional-samples/sample.catifier/manifest.json
+++ b/functional-samples/sample.catifier/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0",
     "description": "Replace every image by a cat's image in a website you visit",
     "permissions": ["declarativeNetRequest"],
-    "host_permissions": ["*://*/*"],
+    "host_permissions": ["<all_urls>"],
     "declarative_net_request": {
         "rule_resources": [{
           "id": "ruleset_1",
