--- a/functional-samples/tutorial.open-api-reference/manifest.json
+++ b/functional-samples/tutorial.open-api-reference/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "Open extension API docs",
+  "name": "Open extension API reference",
   "version": "1.0.0",
   "icons": {
     "16": "icon-16.png",
     "128": "icon-128.png"
   },
   "background": {
-    "service_worker": "sw.js",
+    "service_worker": "service-worker.js",
     "type": "module"
   },
   "minimum_chrome_version": "102",
