Move host permissions

--- a/functional-samples/tutorial.open-api-reference/manifest.json
+++ b/functional-samples/tutorial.open-api-reference/manifest.json
@@ -15,11 +15,11 @@
     "keyword": "api"
   },
   "permissions": ["alarms", "storage"],
+  "host_permissions": ["https://extension-tips.glitch.me/*"],
   "content_scripts": [
     {
       "matches": ["https://developer.chrome.com/docs/extensions/reference/*"],
       "js": ["content.js"]
     }
-  ],
-  "host_permissions": ["https://extension-tips.glitch.me/*"]
+  ]
 }
