--- a/functional-samples/tutorial.quick-api-reference/manifest.json
+++ b/functional-samples/tutorial.quick-api-reference/manifest.json
@@ -1,6 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Open extension API reference",
+  "name": "Quick API Reference",
+  "description": "Quick API can speed up the building of Chrome extensions.",
   "version": "1.0.0",
   "icons": {
     "16": "icon-16.png",
