Move icons into images folder

--- a/functional-samples/tutorial.quick-api-reference/manifest.json
+++ b/functional-samples/tutorial.quick-api-reference/manifest.json
@@ -4,8 +4,8 @@
   "description": "Quick API can speed up the building of Chrome extensions.",
   "version": "1.0.0",
   "icons": {
-    "16": "icon-16.png",
-    "128": "icon-128.png"
+    "16": "images/icon-16.png",
+    "128": "images/icon-128.png"
   },
   "background": {
     "service_worker": "service-worker.js",
