Rewrite sample using mouse event.

--- a/functional-samples/sample.inline-script-anchor-clicker/manifest.json
+++ b/functional-samples/sample.inline-script-anchor-clicker/manifest.json
@@ -3,10 +3,16 @@
   "version": "1.0",
   "manifest_version": 3,
   "description": "A sample of clicking on an anchor element with javascript: scheme",
-  "background": {
-    "service_worker": "background.js"
-  },
   "content_scripts": [
+    {
+      "matches": [
+        "file:///*/sample.inline-script-anchor-clicker/inline-script-demo.html"
+      ],
+      "js": [
+        "proxy-click.js"
+      ],
+      "world": "MAIN"
+    },
     {
       "matches": [
         "file:///*/sample.inline-script-anchor-clicker/inline-script-demo.html"
@@ -15,11 +21,5 @@
         "content.js"
       ]
     }
-  ],
-  "permissions": [
-    "scripting"
-  ],
-  "host_permissions": [
-    "file:///*/sample.inline-script-anchor-clicker/inline-script-demo.html"
   ]
 }
