add eslint-config-prettier so eslint can load prettier, pin dev deps

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "homepage": "https://github.com/GoogleChrome/chrome-extensions-samples#readme",
   "devDependencies": {
-    "eslint": "^8.34.0",
+    "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.1.2",
+    "husky": "8.0.0",
+    "lint-staged": "13.1.2",
     "prettier": "2.8.4"
   },
   "lint-staged": {
