--- a/functional-samples/cookbook.sidepanel-action/manifest.json
+++ b/functional-samples/cookbook.sidepanel-action/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "VIOLET google.com side panel example",
+  "name": "Site-specific side panel",
   "version": "1.0",
   "description": "Use the action icon or keyboard shortcut to open the side panel on google.com",
   "background": {
@@ -10,11 +10,6 @@
     "default_title": "Click to open panel"
   },
   "permissions": ["sidePanel", "tabs"],
-  "icons": {
-    "16": "images/icon-16.png",
-    "48": "images/icon-48.png",
-    "128": "images/icon-128.png"
-  },
   "commands": {
     "_execute_action": {
       "suggested_key": {
@@ -22,5 +17,10 @@
         "mac": "Command+B"
       }
     }
+  },
+  "icons": {
+    "16": "images/icon-16.png",
+    "48": "images/icon-48.png",
+    "128": "images/icon-128.png"
   }
 }
