--- a/api-samples/default_command_override/manifest.json
+++ b/api-samples/default_command_override/manifest.json
@@ -7,7 +7,12 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_icon": "images/tabFlipper16.png",
+    "default_icon": {
+      "16": "images/tabFlipper16.png",
+      "32": "images/tabFlipper32.png",
+      "48": "images/tabFlipper48.png",
+      "128": "images/tabFlipper128.png"
+    },
     "default_title": "Press Ctrl(Win)/Command(Mac)+Shift+ Left or Right to Flip Tabs"
   },
   "commands": {
