--- a/api-samples/omnibox/new-tab-search/manifest.json
+++ b/api-samples/omnibox/new-tab-search/manifest.json
@@ -10,7 +10,9 @@
   "action": {
     "default_icon": {
       "16": "newtab_search16.png",
-      "32": "newtab_search32.png"
+      "32": "newtab_search32.png",
+      "48": "newtab_search48.png",
+      "128": "newtab_search128.png"
     }
   },
   "icons": {
