enhanced default_icon, pretty print

--- a/functional-samples/tutorial.broken-color/manifest.json
+++ b/functional-samples/tutorial.broken-color/manifest.json
@@ -7,11 +7,11 @@
   "background": {
     "service_worker": "service-worker.js"
   },
-
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/icon-16.png"
+      "16": "images/icon-16.png",
+      "128": "images/icon-128.png"
     }
   },
   "icons": {
