added json for prettier, npm run prettier

--- a/api-samples/declarativeNetRequest/url-blocker/manifest.json
+++ b/api-samples/declarativeNetRequest/url-blocker/manifest.json
@@ -6,15 +6,14 @@
   "background": {
     "service_worker": "service_worker.js"
   },
-  "declarative_net_request" : {
-    "rule_resources" : [{
-      "id": "ruleset_1",
-      "enabled": true,
-      "path": "rules_1.json"
-    }]
+  "declarative_net_request": {
+    "rule_resources": [
+      {
+        "id": "ruleset_1",
+        "enabled": true,
+        "path": "rules_1.json"
+      }
+    ]
   },
-  "permissions": [
-    "declarativeNetRequest",
-    "declarativeNetRequestFeedback"
-  ]
+  "permissions": ["declarativeNetRequest", "declarativeNetRequestFeedback"]
 }
