added *.json to prettier in lint-staged

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "**/*.js": [
       "npx eslint --fix"
     ],
-    "**/*.{md,html}": [
+    "**/*.{md,html,json}": [
       "npx prettier --write"
     ]
   }
