--- a/functional-samples/cookbook.wasm-helloworld-print-nomodule/manifest.json
+++ b/functional-samples/cookbook.wasm-helloworld-print-nomodule/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "WASM Load Example - Helloworld (no-module)",
+  "name": "WASM Load Example - Helloworld (no-modules)",
   "version": "1.0",
   "manifest_version": 3,
   "description": "Inspect background service worker console for output",
