--- a/api-samples/webRequest/manifest.json
+++ b/api-samples/webRequest/manifest.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "manifest_version": 3,
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "service-worker.js"
   },
   "permissions": [
     "webRequest",
