--- a/api-samples/webRequest/http-auth/manifest.json
+++ b/api-samples/webRequest/http-auth/manifest.json
@@ -8,5 +8,8 @@
   "permissions": [
     "webRequest",
     "webRequestAuthProvider"
+  ],
+  "host_permissions": [
+    "https://jigsaw.w3.org/*"
   ]
 }
