Replaced windows API with Tabs to modernize

--- a/api-samples/Sandbox/sandbox/manifest.json
+++ b/api-samples/Sandbox/sandbox/manifest.json
@@ -8,7 +8,9 @@
     },
   "permissions": [
     "offscreen",
-    "nativeMessaging"
+    "nativeMessaging",
+    "tabs",
+    "activeTab"
   ],
   "icons": {
     "128": "icon_128.png"
