--- a/api-samples/contentSettings/manifest.json
+++ b/api-samples/contentSettings/manifest.json
@@ -2,7 +2,7 @@
   "name": "Content settings",
   "version": "0.3",
   "description": "Shows the content settings for the current site.",
-  "permissions": ["contentSettings", "tabs"],
+  "permissions": ["contentSettings", "activeTab"],
   "action": {
     "default_icon": "contentSettings.png",
     "default_popup": "popup.html"
