--- a/api-samples/topSites/manifest.json
+++ b/api-samples/topSites/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "topSites API sample",
   "version": "2",
-  "description": "extension to prototype new NTP designs",
+  "description": "An extension demonstrating the chrome.topSites API",
   "chrome_url_overrides": {
     "newtab": "newTab.html"
   },
