Added mv3 rich notifications sample

--- a/api-samples/richNotification/manifest.json
+++ b/api-samples/richNotification/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "manifest_version": 3,
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "service-worker.js"
   },
   "action": {},
   "permissions": ["notifications"]
