--- a/functional-samples/cookbook.geolocation-offscreen/manifest.json
+++ b/functional-samples/cookbook.geolocation-offscreen/manifest.json
@@ -5,6 +5,11 @@
   "background": {
     "service_worker": "service_worker.js"
   },
-  "action": {},
+  "action": {
+    "default_title": "Click to find location...",
+    "default_icon": {
+      "48": "images/grey.png"
+    }
+  },
   "permissions": ["offscreen", "geolocation"]
 }
