--- a/api-samples/richNotification/manifest.json
+++ b/api-samples/richNotification/manifest.json
@@ -3,9 +3,8 @@
   "description": "An extension that cycles through template types of notifications whenever the user interacts with one.",
   "version": "1.0",
   "manifest_version": 3,
-  "background": {
-    "service_worker": "service-worker.js"
+  "action": {
+    "default_popup": "popup.html"
   },
-  "action": {},
   "permissions": ["notifications"]
 }
