--- a/api-samples/debugger/manifest.json
+++ b/api-samples/debugger/manifest.json
@@ -3,7 +3,7 @@
   "name": "Debugger Extension",
   "description": "Demonstrates the API by attaching a debugger to a webpage and capturing network data.",
   "version": "1.0",
-  "permissions": ["debugger", "tabs", "storage"],
+  "permissions": ["debugger", "tabs"],
   "host_permissions": ["https://www.google.com/*"],
   "background": {
     "service_worker": "service-worker.js"
