Fix wrong favicon path

--- a/api-samples/topSites/magic8ball/manifest.json
+++ b/api-samples/topSites/magic8ball/manifest.json
@@ -5,6 +5,6 @@
   "chrome_url_overrides": {
     "newtab": "newTab.html"
   },
-  "permissions": ["topSites"],
+  "permissions": ["topSites", "favicon"],
   "manifest_version": 3
 }
