--- a/.repo/sample-list-generator/package.json
+++ b/.repo/sample-list-generator/package.json
@@ -6,13 +6,13 @@
     "prefetch": "ts-node src/prepare-chrome-types.ts"
   },
   "devDependencies": {
-    "@types/babel__core": "^7.20.1",
-    "@types/node-fetch": "^2.6.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "@types/babel__core": "7.20.1",
+    "@types/node-fetch": "2.6.4",
+    "ts-node": "10.9.1",
+    "typescript": "5.1.3"
   },
   "dependencies": {
-    "@babel/core": "^7.22.5",
-    "node-fetch": "^2.6.11"
+    "@babel/core": "7.22.5",
+    "node-fetch": "2.6.11"
   }
 }
