--- a/api-samples/sandbox/sandbox/manifest.json
+++ b/api-samples/sandbox/sandbox/manifest.json
@@ -3,12 +3,13 @@
   "version": "1.0.3",
   "manifest_version": 3,
   "background": {
-      "service_worker": "service-worker.js"
-    },
+    "service_worker": "service-worker.js"
+  },
   "icons": {
     "128": "icon_128.png"
   },
   "sandbox": {
     "pages": ["sandbox.html"]
-  }
+  },
+  "action": {}
 }
