Add recording item to tabCapture demo.
Adds an icon which indicates if recording is currently in
progress.

--- a/functional-samples/sample.tabcapture-recorder/manifest.json
+++ b/functional-samples/sample.tabcapture-recorder/manifest.json
@@ -4,10 +4,10 @@
   "version": "1",
   "manifest_version": 3,
   "action": {
-    "default_icon": "icon.png"
+    "default_icon": "icons/not-recording.png"
   },
   "background": {
     "service_worker": "service-worker.js"
   },
-  "permissions": ["tabs", "tabCapture", "offscreen", "downloads"]
+  "permissions": ["tabCapture", "offscreen"]
 }
