--- a/functional-samples/sample.tabcapture-recorder/manifest.json
+++ b/functional-samples/sample.tabcapture-recorder/manifest.json
@@ -3,6 +3,7 @@
   "description": "Records the current tab in an offscreen document.",
   "version": "1",
   "manifest_version": 3,
+  "minimum_chrome_version": "116",
   "action": {
     "default_icon": "icons/not-recording.png"
   },
