--- a/functional-samples/tutorial.websockets/manifest.json
+++ b/functional-samples/tutorial.websockets/manifest.json
@@ -3,10 +3,10 @@
   "description": "How to use WebSockets in your Chrome Extension.",
   "version": "1.0",
   "manifest_version": 3,
+  "minimum_chrome_version": "116",
   "action": {
     "default_icon": "icons/socket-inactive.png"
   },
-  "permissions": ["storage"],
   "background": {
     "service_worker": "service-worker.js",
     "type": "module"
