Check property type with typedoc

--- a/.repo/sample-list-generator/package.json
+++ b/.repo/sample-list-generator/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@babel/core": "7.22.5",
-    "node-fetch": "2.6.11"
+    "node-fetch": "2.6.11",
+    "typedoc": "^0.24.8"
   }
 }
