Add extension page Add content script

--- a/functional-samples/sample.sidepanel-dictionary/manifest.json
+++ b/functional-samples/sample.sidepanel-dictionary/manifest.json
@@ -13,8 +13,5 @@
   "side_panel": {
     "default_path": "sidepanel.html"
   },
-  "permissions": [
-    "sidePanel",
-    "contextMenus"
-  ]
+  "permissions": ["sidePanel", "contextMenus"]
 }
