--- a/functional-samples/cookbook.sidepanel-open/manifest.json
+++ b/functional-samples/cookbook.sidepanel-open/manifest.json
@@ -3,23 +3,20 @@
   "name": "Open side panel",
   "version": "1.0",
   "description": "Use user interactions to open the side panel",
+  "minimum_chrome_version": "116",
   "background": {
     "service_worker": "service-worker.js"
   },
   "side_panel": {
     "default_path": "sidepanel-global.html"
   },
-  "permissions": ["sidePanel", "contextMenus"],
-  "minimum_chrome_version": "116",
-  "commands": {
-    "open_side_panel": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+Y",
-        "mac": "Command+Shift+Y"
-      },
-      "description": "Opens the tab-specific side panel"
+  "content_scripts": [
+    {
+      "js": ["content-script.js"],
+      "matches": ["https://www.google.com/*"]
     }
-  },
+  ],
+  "permissions": ["sidePanel", "contextMenus"],
   "icons": {
     "16": "images/icon-16.png",
     "48": "images/icon-48.png",
