Set manager.html as the options page

--- a/api-samples/declarativeNetRequest/no-cookies-manager/manifest.json
+++ b/api-samples/declarativeNetRequest/no-cookies-manager/manifest.json
@@ -15,5 +15,9 @@
     "declarativeNetRequest",
     "declarativeNetRequestFeedback",
     "activeTab"
-  ]
+  ],
+  "options_ui": {
+    "page": "manager.html",
+    "open_in_tab": true
+  }
 }
