Fix wrong node version

--- a/.github/workflows/sample-list-generator.yml
+++ b/.github/workflows/sample-list-generator.yml
@@ -8,12 +8,12 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: 18
 
       - name: Enter the script directory
         run: cd ./.repo/sample-list-generator
