--- a/.repo/sample-list-generator/package.json
+++ b/.repo/sample-list-generator/package.json
@@ -8,17 +8,17 @@
   },
   "devDependencies": {
     "@types/babel__core": "7.20.1",
-    "@types/mocha": "^10.0.1",
+    "@types/mocha": "10.0.1",
     "@types/node-fetch": "2.6.4",
-    "@types/sinon": "^10.0.15",
-    "mocha": "^10.2.0",
-    "sinon": "^15.2.0",
+    "@types/sinon": "10.0.15",
+    "mocha": "10.2.0",
+    "sinon": "15.2.0",
     "ts-node": "10.9.1",
     "typescript": "5.1.3"
   },
   "dependencies": {
     "@babel/core": "7.22.5",
     "node-fetch": "2.6.11",
-    "typedoc": "^0.24.8"
+    "typedoc": "0.24.8"
   }
 }
