--- a/.github/workflows/sample-list-generator.yml
+++ b/.github/workflows/sample-list-generator.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
 
+defaults:
+  run:
+    working-directory: ./.repo/sample-list-generator
+
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -14,9 +18,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
-      - name: Enter the script directory
-        run: cd ./.repo/sample-list-generator
 
       - name: Install dependencies
         run: npm install
