--- a/.github/workflows/sample-list-generator.yml
+++ b/.github/workflows/sample-list-generator.yml
@@ -29,5 +29,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: extension-samples.json
-          path: ./extension-samples.json
+          path: ./.repo/sample-list-generator/extension-samples.json
           if-no-files-found: error
