--- a/api-samples/alarms/manifest.json
+++ b/api-samples/alarms/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Alarms API Demo",
   "version": "1.0",
+  "description": "This sample demonstrates the chrome.alarms API by allowing the user to set alarms using an extension page.",
   "manifest_version": 3,
   "background": {
     "service_worker": "bg-wrapper.js"
