--- a/api-samples/cookies/cookie-clearer/manifest.json
+++ b/api-samples/cookies/cookie-clearer/manifest.json
@@ -2,6 +2,7 @@
   "name": "Cookie Clearer",
   "manifest_version": 3,
   "version": "1.0",
+  "description": "This sample demonstrates the chrome.cookies API by letting a user delete their cookies via a popup UI.",
   "permissions": ["cookies"],
   "host_permissions": ["<all_urls>"],
   "action": {
