--- a/functional-samples/cookbook.wasm-helloworld-print-nomodule/manifest.json
+++ b/functional-samples/cookbook.wasm-helloworld-print-nomodule/manifest.json
@@ -2,7 +2,7 @@
   "name": "WASM Load Example - Helloworld (no-modules)",
   "version": "1.0",
   "manifest_version": 3,
-  "description": "Inspect background service worker console for output",
+  "description": "This recipe shows how to use WASM in Manifest V3.",
   "background": {
     "service_worker": "background.js"
   },
