--- a/api-samples/browsingData/manifest.json
+++ b/api-samples/browsingData/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "BrowsingData API: Basics",
   "version": "1.2",
-  "description": "This sample demonstrates using chrome.contentSettings to display the settings of a given page in the extension's popup.",
+  "description": "This sample demonstrates using the chrome.browsingData API to clear the user's history without having to visit the history page.",
   "permissions": ["browsingData"],
   "action": {
     "default_icon": "icon.png",
